fix(print): white space left side

--- a/css/congratulatory.css
+++ b/css/congratulatory.css
@@ -15,10 +15,10 @@
 }
 
 .car-name-print {
-	width      : 434px;
+	width      : 431px;
 	position   : relative;
 	text-align : center;
-	top        : 28px;
+	top        : 6px;
 	left       : -66px;
 }
 
