--- a/css/print.css
+++ b/css/print.css
@@ -90,7 +90,7 @@ html, body {
 	width      : 250px;
 	position   : relative;
 	text-align : center;
-	top        : -123px;
+	top        : -132px;
 	left       : -10px;
 }
 
@@ -110,11 +110,12 @@ html, body {
  }
 
  .congrats-background img {
-	width     : 304mm;
-	min-width : 304mm;
-	height    : 190mm;
-	top       : 0;
-	left      : 1px;
+	width       : 305mm;
+	min-width   : 305mm;
+	height      : 190mm;
+	top         : 0;
+	left        : 1px;
+	margin-left : -1mm;
 }
 
 /*.bg-under-congrats {*/
@@ -217,8 +218,9 @@ html, body {
 }
 
 .kidzania-logo-congrats {
-  left     : 935px;
-  position : absolute;
+	top      : 22px;
+	left     : 935px;
+	position : absolute;
 }
 
 .kidzania-logo-congrats img {
@@ -227,8 +229,8 @@ html, body {
 
 .honda-logo-congrats {
 	position : absolute;
-	top      : 24px;
-	left     : 22px;
+	top      : 34px;
+	left     : 30px;
 }
 
 .honda-logo-congrats img {
